--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/30/n12917244.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918712-Keith_1920_cn-320x200.jpg"><p align="center">【萧茗看世界】美亿万富翁大战华为</p></a>
-<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/30/n12917244.md#1" title="【萧茗看世界】美亿万富翁大战华为""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918712-Keith_1920_cn-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919431.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919512-GettyImages-1232642970-1-320x200.jpg"><p align="center">NASA逾50年首见 SpaceX载人飞船夜降大海</p></a>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919431.md#1" title="NASA逾50年首见 SpaceX载人飞船夜降大海""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919512-GettyImages-1232642970-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918251.md#1" title="法轮功5200人排字贺创始人华诞 参与者谢师恩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918327-2105010555472384-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919595.md#1" title="不只弯道超车 中共围剿特斯拉阴谋（上）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919604-GettyImages-1232397485-320x200.jpg">&nbsp;</a>
@@ -12,13 +11,14 @@
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918707.md#1" title="法轮大法洪传29周年 纽约学员向师尊祝寿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918709-148833-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918699.md#1" title="中企悄悄买巨额英国资产 含能源国防领域""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/10/1110121409031793-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918788.md#1" title="河北高校持续封校 学生快憋疯五一冲校门""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918814-photo_2021-05-02_11-30-34-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918565.md#1" title="美下周恢复中国学生签证处理 部分专业受限""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-143649596-600x400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ckfwfs3192.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919948.md#1">中国28家银行四月发债2196亿人民币</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919894.md#1">捕获率三千万分之一 蓝纹龙虾在餐厅被救下</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟新设运输部队</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919608.md#1">探秘世界各国的真实军力——美军有多强（一）</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析如何影响世界格局</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919894.md#1">捕获率三千万分之一 蓝纹龙虾在餐厅被救下</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟新设运输部队</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919608.md#1">探秘世界各国的真实军力——美军有多强（一）</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析如何影响世界格局</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919679.md#1">印度吁放弃疫苗专利 美贸易代表将参加世贸谈判</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12917976.md#1">【拍案惊奇】山东号停滞？清末学者预言中共结局</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918289.md#1">天津和平公安分局主任跳楼身亡 官方噤声</a><br>
@@ -52,7 +52,6 @@
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918559.md#1">【新闻看点】习与毛争锋名言？美防长布局备战</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/2/n12854663.md#1">【横河观点】印突变病毒引忧 美国需协防台湾</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12917860.md#1">骚扰不断 家门被封 被迫流亡的中国老人</a><br>
-<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918565.md#1">美下周恢复中国学生签证处理 部分专业受限</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918398.md#1">习近平一带一路背后：中国劳工海外陷绝望</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918190.md#1">美防长首个重要演说：下次大战将完全不同</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/30/n12916576.md#1">控告江泽民陷冤狱 沈阳老人被扣发养老金3年</a><br>
@@ -95,15 +94,16 @@
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/28/n12911794.md#1">古天乐自曝近视加老花 等有白内障一次动手术</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/28/n12911558.md#1">习近平突改“游戏规则”：马云沉浮录</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/28/n12911442.md#1">【微视频】华为造车 特斯拉成中共权贵障碍被黑</a><br>
+<a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/26/n12906024.md#1">陕西第一任政法委书记孙安华迫害法轮功罪行</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.45.171.220/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,671</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.164.16.99/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,671</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
 !共 376,646,918 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919132-1d381c35-da5a-48b3-a9ae-f1e7fcb7a313-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1">绿叶行动薛仁义出狱日 重庆多人被控制</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917361.md#1">北京小汤山强拆后续 业主失联小区清场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913564.md#1">中共株连制打压百姓 母亲被儿子撵出家门</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916513.md#1">富商控全国人大蔡学恩律所 涉嫌虚构诉讼（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914624.md#1">退休上校死于山东监狱 中共被指步步违法</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914772.md#1">贵阳基督徒遭非法拘留 状告公安局被拒</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919948.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/07/GettyImages-56493122-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919948.md#1">中国28家银行四月发债2196亿人民币</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918466.md#1">经济安保考量 日本SBI取消与中国平安集团合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918421.md#1">浙江桐庐前首富被判18年 股权转手国资委</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917841.md#1">腾讯地图等33款APP 暗地收集用户资料</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917767.md#1">中共高调介入郑爽逃税案 大陆演艺界人人自危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917502.md#1">2020年中国农民工减少逾500万人</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2013/04/1209232048021497-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟新设运输部队</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918496.md#1">美国密州就疫情追责 传唤中共多个部委</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919295.md#1">台驻法代表受邀去美驻外使馆交流 42年来首次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918997.md#1">山西霍州公安前副局长王大鸣被举报涉敲诈等</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918902.md#1">中共再整肃家庭教会 安顺多名教友被刑拘抄家</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918065-GettyImages-1232554642-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析如何影响世界格局</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919112.md#1">浙江一病例隔离14天后才呈阳性 曾搭乘火车</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917755.md#1">五一前北京多地降雪“入冬” 网民：天有异象</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917951.md#1">五一包茂高速重庆路段发生车祸 致4死1伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917342.md#1">中共专家称中国多地现印度毒株 网民热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916661.md#1">广西再发砍人事件 传两名孩童被割喉</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919492-shandong-and-hangzhou-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1">杭州西湖游客如织 泰山人多景区不认遭驳斥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919222.md#1">五一武汉上海办音乐节 人潮挤爆未戴口罩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919081.md#1">五一北京西站交通大瘫痪 旅客怨声载道</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918917.md#1">南充女子持刀抢ATM存钱的市民 2人受伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917861.md#1">五一大陆景区游客密集 高速拥堵引吐槽</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918165.md#1">“18元一日游”重庆老人竟被带去看墓地</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913513.md#1">传中南财经政法大学挖出两地雷 网络热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/28/n12910739.md#1">广西幼儿园砍人案十八伤 传多名幼儿死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909705.md#1">郭富城常演深沉角色 自认个性有趣不拒拍喜剧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909172.md#1">美宣布放宽旅行限制 中国学生今秋可赴美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/26/n12906360.md#1">只因这句话？赵婷奥斯卡领奖 中共封杀</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919132-1d381c35-da5a-48b3-a9ae-f1e7fcb7a313-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1">绿叶行动薛仁义出狱日 重庆多人被控制</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917361.md#1">北京小汤山强拆后续 业主失联小区清场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913564.md#1">中共株连制打压百姓 母亲被儿子撵出家门</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916513.md#1">富商控全国人大蔡学恩律所 涉嫌虚构诉讼（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914624.md#1">退休上校死于山东监狱 中共被指步步违法</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914772.md#1">贵阳基督徒遭非法拘留 状告公安局被拒</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918466.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918471-GettyImages-156959733-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918466.md#1">经济安保考量 日本SBI取消与中国平安集团合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918421.md#1">浙江桐庐前首富被判18年 股权转手国资委</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917841.md#1">腾讯地图等33款APP 暗地收集用户资料</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917767.md#1">中共高调介入郑爽逃税案 大陆演艺界人人自危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917502.md#1">2020年中国农民工减少逾500万人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917302.md#1">海航集团2020年净亏损近千亿</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2013/04/1209232048021497-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟新设运输部队</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918496.md#1">美国密州就疫情追责 传唤中共多个部委</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919295.md#1">台驻法代表受邀去美驻外使馆交流 42年来首次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918997.md#1">山西霍州公安前副局长王大鸣被举报涉敲诈等</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918902.md#1">中共再整肃家庭教会 安顺多名教友被刑拘抄家</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918065-GettyImages-1232554642-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析如何影响世界格局</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919112.md#1">浙江一病例隔离14天后才呈阳性 曾搭乘火车</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917755.md#1">五一前北京多地降雪“入冬” 网民：天有异象</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917951.md#1">五一包茂高速重庆路段发生车祸 致4死1伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917342.md#1">中共专家称中国多地现印度毒株 网民热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916661.md#1">广西再发砍人事件 传两名孩童被割喉</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919492-shandong-and-hangzhou-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1">杭州西湖游客如织 泰山人多景区不认遭驳斥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919222.md#1">五一武汉上海办音乐节 人潮挤爆未戴口罩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919081.md#1">五一北京西站交通大瘫痪 旅客怨声载道</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918917.md#1">南充女子持刀抢ATM存钱的市民 2人受伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917861.md#1">五一大陆景区游客密集 高速拥堵引吐槽</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918165.md#1">“18元一日游”重庆老人竟被带去看墓地</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913513.md#1">传中南财经政法大学挖出两地雷 网络热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/28/n12910739.md#1">广西幼儿园砍人案十八伤 传多名幼儿死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909705.md#1">郭富城常演深沉角色 自认个性有趣不拒拍喜剧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909172.md#1">美宣布放宽旅行限制 中国学生今秋可赴美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/26/n12906360.md#1">只因这句话？赵婷奥斯卡领奖 中共封杀</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/19/n12888922.md#1">【独家】文件爆西藏部队缺疫苗向河北求援</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/4/n12857876.md#1">【独家】联合国“移民网络”项目引担忧</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/3/29/n12842945.md#1">【独家】江苏内部文件泄迫害法轮功内幕</a><br>
